[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["hugo <hugo.cavan2386@gmail.com>"]

[[tool.poetry.source]]
name = "sjtu"
url = "https://mirrors.sjtug.sjtu.edu.cn/pypi/web/simple"
default = true

[tool.poetry.dependencies]
python = "^3.8"
gevent = "^20.12.1"
flask = "^1.1.2"
flask-socketio = "^5.0.1"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
hypothesis = "^5.43.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
